--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "rapid-carousel",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Carousel library.",
   "main": "dist/cjs/index.js",
   "files": [
     "dist"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Pushpendra766/rapid-carousel.git"
+  },
   "types": "dist/index.d.ts",
   "scripts": {
     "rollup": "rollup -c --bundleConfigAsCjs"
