--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rapid-carousel",
-  "version": "1.0.1",
+  "version": "1.0.8",
   "description": "Carousel library.",
   "main": "dist/cjs/index.js",
   "files": [
@@ -25,6 +25,7 @@
   ],
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.7",
+    "rollup-plugin-svg": "^2.0.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
@@ -33,6 +34,7 @@
     "rollup": "^4.10.0",
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3"
   },
